added core and game projects

--- a/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
+++ b/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Audacia.Quest.Game\Audacia.Quest.Game.csproj" />
+  </ItemGroup>
+
 </Project>
