added events and game time

--- a/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
+++ b/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Audacia.Quest.Core\Audacia.Quest.Core.csproj" />
     <ProjectReference Include="..\Audacia.Quest.Game\Audacia.Quest.Game.csproj" />
   </ItemGroup>
 
