--- a/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
+++ b/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\Audacia.Quest.Game\Audacia.Quest.Game.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\assets\fox.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
