added sprite sheet renderer

--- a/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
+++ b/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
@@ -22,6 +22,9 @@
     <Content Update="wwwroot\assets\fox.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\assets\Idle.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
