fixed component initialization, and animations

--- a/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
+++ b/Audacia.Quest/Audacia.Quest/Audacia.Quest.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="wwwroot\assets\Attack1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\assets\fox.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
